src/test/resources/wacc_examples/invalid/syntaxErr/imports/fileNameNoQuotes.wacc
# tries to import a file without enclosing it in double quotes
begin
    include test1.wacc
    skip
end